mutants.out/log/cli_types__src__lib.rs_line_29_col_9.log

*** cli_types/src/lib.rs:29:9: replace <impl FromStr for DispersionMethod>::from_str -> Result<Self, Self::Err> with Ok(Default::default())

*** mutation diff:
--- cli_types/src/lib.rs
+++ replace <impl FromStr for DispersionMethod>::from_str -> Result<Self, Self::Err> with Ok(Default::default())
@@ -21,24 +21,17 @@
     #[value(name = "mad")]
     MedianAbsoluteDeviation,
 }
 
 impl FromStr for DispersionMethod {
     type Err = anyhow::Error;
 
     fn from_str(s: &str) -> Result<Self, Self::Err> {
-        match s {
-            "stddev" => Ok(DispersionMethod::StandardDeviation),
-            "mad" => Ok(DispersionMethod::MedianAbsoluteDeviation),
-            _ => Err(anyhow!(
-                "Invalid dispersion method: {}. Valid values are 'stddev' or 'mad'",
-                s
-            )),
-        }
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 #[derive(Parser)]
 #[command(version, name = "git-perf")]
 pub struct Cli {
     /// Increase verbosity level (can be specified multiple times.) The first level sets level
     /// "info", second sets level "debug", and third sets level "trace" for the logger.


*** /root/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo check --tests --verbose --package=git_perf_cli_types@0.1.1
       Fresh unicode-ident v1.0.12
       Fresh proc-macro2 v1.0.95
       Fresh utf8parse v0.2.1
       Fresh autocfg v1.1.0
       Fresh anstyle-parse v0.2.3
       Fresh quote v1.0.40
       Fresh anstyle-query v1.0.2
       Fresh is_terminal_polyfill v1.70.1
       Fresh colorchoice v1.0.0
       Fresh anstyle v1.0.10
       Fresh anstream v0.6.18
       Fresh syn v2.0.100
       Fresh heck v0.4.1
       Fresh clap_lex v0.6.0
       Fresh strsim v0.10.0
       Fresh clap_builder v4.4.12
       Fresh clap_derive v4.4.7
       Fresh num-traits v0.2.17
       Fresh iana-time-zone v0.1.59
       Fresh clap v4.4.13
       Fresh chrono v0.4.39
       Fresh anyhow v1.0.79
       Dirty git_perf_cli_types v0.1.1 (/tmp/cargo-mutants-repo-l6y6pT.tmp/cli_types): the file `cli_types/src/lib.rs` has changed (1758958853.161586586s, 1s after last build at 1758958852.901628100s)
    Checking git_perf_cli_types v0.1.1 (/tmp/cargo-mutants-repo-l6y6pT.tmp/cli_types)
     Running `/root/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name git_perf_cli_types --edition=2021 cli_types/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,metadata -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=7ae4d00c7adb4409 -C extra-filename=-d56307f0ee33750c --out-dir /tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libanyhow-d3df5968a6327529.rmeta --extern chrono=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libchrono-0d4edf02d7163120.rmeta --extern clap=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libclap-812c94d234c2ea3d.rmeta`
error[E0277]: the trait bound `DispersionMethod: Default` is not satisfied
  --> cli_types/src/lib.rs:29:12
   |
29 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
   |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `DispersionMethod`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `git_perf_cli_types` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/root/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name git_perf_cli_types --edition=2021 cli_types/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,metadata -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=7ae4d00c7adb4409 -C extra-filename=-d56307f0ee33750c --out-dir /tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libanyhow-d3df5968a6327529.rmeta --extern chrono=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libchrono-0d4edf02d7163120.rmeta --extern clap=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libclap-812c94d234c2ea3d.rmeta` (exit status: 1)

*** result: Failure(101)
